feat(backend): notification endpoints
